# app/api/routes.go
@@ -15,6 +15,7 @@ func (h *Handler) Register(v1 *echo.Group) {
 	accounts := v1.Group("/accounts")
 	accounts.POST("", h.account.CreateAccount)
 	accounts.GET("", h.account.GetAllAccounts)
+	accounts.GET("/:account_id/balance", h.account.GetAccountBalance)
 }
 
 // RegisterSwagger sets the route to swagger documentations
