# docs/swagger.json
@@ -76,6 +76,43 @@
                 }
             }
         },
+        "/api/accounts/{account_id}/balance": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Get account balance information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the account to get",
+                        "name": "account_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/representation.AccountBalanceResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/healthcheck": {
             "get": {
                 "description": "Returns true or false, depeding on the state of app.",
@@ -115,12 +152,26 @@
                 }
             }
         },
-        "representation.AccountResponse": {
+        "representation.AccountBalanceResponse": {
             "type": "object",
             "properties": {
                 "balance": {
                     "type": "number"
                 },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "representation.AccountResponse": {
+            "type": "object",
+            "properties": {
                 "cpf": {
                     "type": "string"
                 },
@@ -128,7 +179,7 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
